doc: Add Investigations

--- a/.nwa-config.yaml
+++ b/.nwa-config.yaml
@@ -16,6 +16,7 @@ nwa:
     - "COPYING.LESSER"
     - "LICENSE"
   path:
+    - "doc/**"
     - "src/**/*.pkl"
     - ".mise.toml"
     - ".nwa-config.yaml"
