build(hk): Lint Markdown Files

--- a/.mise.toml
+++ b/.mise.toml
@@ -6,5 +6,6 @@ go = "latest"
 "go:github.com/B1NARY-GR0UP/nwa" = "latest"
 hk = "latest"
 node = "lts"
+"npm:markdownlint-cli2" = "latest"
 "npm:prettier" = "latest"
 pkl = "latest"
