--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
         "typecheck": "tsc --build tsconfig.build.json --pretty --verbose --stopBuildOnErrors",
         "build": "pnpm run clean && tsup",
         "dev": "tsx watch src/ts/src/index.ts",
-        "lint": "eslint .",
-        "lint:fix": "eslint . --fix",
+        "lint": "biome check .",
+        "lint:fix": "pnpm run format && biome lint --apply .",
+        "format": "biome format --write .",
         "test": "vitest run",
         "test:watch": "vitest watch",
         "coverage": "vitest run --coverage",
@@ -44,18 +45,14 @@
     ],
     "devDependencies": {
         "@biomejs/biome": "^2.3.5",
-        "@eslint/js": "^9.39.1",
         "@types/node": "^24.10.1",
         "@vitest/coverage-v8": "^4.0.9",
-        "eslint": "^9.39.1",
-        "globals": "^16.5.0",
         "markdownlint-cli2": "^0.19.0",
         "prettier": "^3.6.2",
         "rimraf": "^6.1.0",
         "tsup": "^8.5.1",
         "tsx": "^4.20.6",
         "typescript": "^5.9.3",
-        "typescript-eslint": "^8.46.4",
         "vitest": "^4.0.9"
     }
 }
