chore(spec-kit): Introduce GitHub spec-kit

--- a/.mise.toml
+++ b/.mise.toml
@@ -9,3 +9,6 @@ node = "lts"
 pnpm = "latest"
 pkl = "latest"
 typos = "latest"
+python = "3"
+uv = "latest"
+"pipx:git+https://github.com/github/spec-kit.git" = "latest"
